--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -13,17 +13,19 @@
             </div>
             <div class="col-sm-9 ">
                 <h3>Soluções WEB</h3>
-                <p>Lorem ipsum dolor sit amet, ius et porro consectetuer, est ex omnium delicata corrumpit. No iusto admodum accumsan vix, quaeque dolorum delicata per te. Choro nonumes voluptaria te his, vim laudem aperiri singulis id, sea at veniam quodsi. Et nam aliquip equidem, te mandamus intellegat cum, cu assum iisque est.
-                    </p>
+                <h4>Plataformas Ideais para Você</h4>
+                <p>Desenvolvimento de Sites de todos os tipos, sites de presença, lojas virtuais e plataformas especias desenhadas de forma única para o seu negócio e para você. Entre em contato conosco e vamos bater um papo sem compromisso e descobrir oque você e seu negócio estão precisando nesse momento.
+                </p>
             </div>
             
         </div>
 
         <div class="row index-box1">
             <div class="col-sm-9">
-                <h3>Marketing Digital</h3>
-                <p>Lorem ipsum dolor sit amet, ius et porro consectetuer, est ex omnium delicata corrumpit. No iusto admodum accumsan vix, quaeque dolorum delicata per te. Choro nonumes voluptaria te his, vim laudem aperiri singulis id, sea at veniam quodsi. Et nam aliquip equidem, te mandamus intellegat cum, cu assum iisque est.
-                    </p>
+                <h3>Design</h3>
+                <h4>Sua empresa Linda</h4>
+                <p>Criação de Itentidade Visual para empresas, criação de artes para cartões de visita, flyers, banners e todo material de publicidade e propaganda dentro e fora da internet.
+                </p>
             </div>
             <div class="col-sm-3 ">
                 <img src="{% static 'image/shorticon.png' %}" style="width:100%;">
@@ -35,9 +37,10 @@
                 <img src="{% static 'image/shorticon.png' %}" style="width:100%;">
             </div>
             <div class="col-sm-9 ">
-                <h3>Design</h3>
-                <p>Lorem ipsum dolor sit amet, ius et porro consectetuer, est ex omnium delicata corrumpit. No iusto admodum accumsan vix, quaeque dolorum delicata per te. Choro nonumes voluptaria te his, vim laudem aperiri singulis id, sea at veniam quodsi. Et nam aliquip equidem, te mandamus intellegat cum, cu assum iisque est.
-                    </p>
+                <h3>Marketing Digital</h3>
+                <h4>Esteja presente onde o cliente está.
+                </h4>
+                <p>Criação de artes para publicações, análise de campanhas e expertise no funcionamento das Redes Sociais. Diversos tipos de pacotes e contratações para o nosso serviço ter o tamanho exato que o seu negócio precisa.</p>
             </div>
                 
         </div>
@@ -48,26 +51,28 @@
             <div class="col-sm-4">
                 <div class="index-box2">
                     <h3>Soluções WEB</h3>
-                    <p>TESTE TESTE</p>
-                    <p>TESTE TESTE</p>
-                    <p>TESTE TESTE</p>
+                    <p>Sites a partir de R$:500,00</p>
+                    <p>Lojas Virtuais a partir de R$:1200,00</p>
+                    <p>Blogs com preços especiais</p>
+                    <p>Plataformas Sob Medida</p>
                     
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="index-box2">
                     <h3>Marketing Digital</h3>
-                    <p>TESTE TESTE</p>
-                    <p>TESTE TESTE</p>
-                    <p>TESTE TESTE</p>
+                    <p>Pacotes a partir de R$:120,00 por mês</p>
+                    <p>Venda por quantidade de publicações</p>
+                    <p>Análise completa de redes soiciais</p>
+                    <p>Administração de redes sociais</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="index-box2">
                     <h3>Design</h3>
-                    <p>TESTE TESTE</p>
-                    <p>TESTE TESTE</p>
-                    <p>TESTE TESTE</p>
+                    <p>Criação de Identidades Visuais a partir de R$:250,00</p>
+                    <p>Criação de Artes para Material de Propaganda</p>
+                    <p>Criação de Artes e Design</p>
                 </div>
             </div>
             
